--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -179,4 +179,17 @@
         margin-top: 0.5rem;
         margin-bottom: 0.75rem;
     }
+
+    .prose div:has(> iframe) {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .prose iframe {
+        max-width: 100%;
+        height: auto;
+        aspect-ratio: 16 / 9;
+    }
 }
